// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cms Text Component should be created 1`] = `
<div
  id="root0"
  ng-version="7.1.2"
>
  
</div>
`;

exports[`Cms Text Component should render html text pagelet if set 1`] = `
<div
  id="root1"
  ng-version="7.1.2"
>
  
  <span>
    foo
  </span>
</div>
`;
